# utilities

./: README.md  example_config.yaml  logmanager.py  pyproject.toml  requirements.txt  test_logger.py  test_logmanager.py
Documentation/logger/: HDFS_COPY_GUIDE.md  HDFS_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md
archive/: test_logmanager_old.py
docs/: DISTRIBUTED_COORDINATION_GUIDE.md  DISTRIBUTED_SYSTEMS_GUIDE.md  MOCKING_GUIDE.md  PYTEST_LEARNING_GUIDE.md  RAY_CLUSTER_GUIDE.md  RETRY_CALLBACKS_GUIDE.md
examples/: 2.0-fileio.ipynb  email_handler_example.py  retry_decorator_clean_examples.py  retry_tutorial.py  retry_with_logging_examples.py
examples/logger/: 1.0-logger.ipynb  logger_config.yaml  test_logmanager_comprehensive.ipynb
src/: __init__.py  logmanager.py
src/main/: __init__.py  _default_logger_config.yaml
tests/: MOCKING_GUIDE.md  PYTEST_LEARNING_GUIDE.md  README_TESTING.md  conftest.py  logger_test.py  requirements-test.txt  test_logger.py  test_logmanager.py
tests/auxiliary/: conftest.py  test_retry.py
tests/fileio/: conftest.py  test_base_fileio.py  test_fileio_integration.py  test_fileio_interface.py  test_fileio_retry.py  test_format_classes.py  test_integration.py
tests/logger/: conftest.py  conftest_hdfs.py  logger_test.py  test_duplicate_file_warnings.py  test_duplicate_file_warnings_integration.py  test_hdfs_copy.py  test_hdfs_copy_integration.py  test_hdfs_copy_pytest.py  test_hdfs_copy_simple.py  test_hdfs_standalone.py  test_logmanager.py  test_logmanager_integration.py  test_signal_handling.py
tests/logging/: conftest.py  (+3 more)
(+50 files in other folders)
