[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loguru-logmanager"
version = "0.1.0"
description = "A comprehensive task-aware logging manager built on top of Loguru"
readme = "README.md"
license = {text = "MIT"}
keywords = ["logging", "loguru", "task-aware", "configuration", "yaml"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.6.0",
    "pendulum>=2.0.0",
    "PyYAML>=6.0",
    "upath>=1.0.*",
    "fsspec",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
]

[tool.setuptools]
packages = ["logmanager"]

[tool.setuptools.package-dir]
logmanager = "src/main/logger"

[tool.setuptools.package-data]
logmanager = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --cov=src --maxfail=2 -ra"
markers = [
    "unit: marks tests as unit tests (fast, isolated tests for individual components)",
    "integration: marks tests as integration tests (slower tests that verify multiple components work together)",
]
